mobile-first css for leaderboard component and header

--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,1 +1,17 @@
-<p>leaderboard works!</p>
+<div class="wolf-houses-flex">
+    <div class="wolf-house-flex">
+        <span class="wolf-house-name">Arctic</span>
+        <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
+        <span class="wolf-house-points">145</span>
+    </div>
+    <div class="wolf-house-flex">
+        <span class="wolf-house-name">Timber</span>
+        <img class="wolf-house-symbol" src="../../assets/images/timber-wolf.jpg">
+        <span class="wolf-house-points">234</span>
+    </div>
+    <div class="wolf-house-flex">
+        <span class="wolf-house-name">Grey</span>
+        <img class="wolf-house-symbol" src="../../assets/images/grey-wolf.jpg">
+        <span class="wolf-house-points">542</span>
+    </div>
+</div>
