--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -3,9 +3,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 0.25em;
-    border: 1px solid black;
-/*     align-items: center;*/    
+    margin: 4em 0.25em 0;
+/*     border: 1px solid black;
+ *//*     align-items: center;*/    
 }
 
 .wolf-house-flex {
@@ -19,7 +19,7 @@
     display: block;
     font-size: 1.2rem;
     text-align: center;
-    margin: 0;
+    margin: 0.5em 0;
     width: 100%;
     /* order: 1; */
 }
@@ -43,11 +43,11 @@
 }
 
 /* screens wider than 600px */
-@media screen and (min-width: 520px) {
+@media screen and (min-width: 550px) {
     .wolf-houses-flex {
         margin: 5em auto 0;
-        border: 1px solid black;
-        justify-content: space-between;
+/*         border: 1px solid black;
+ */        justify-content: space-between;
         max-width: 1000px;
     }
     
