--- a/src/app/points/points.component.html
+++ b/src/app/points/points.component.html
@@ -1,1 +1,37 @@
-<p>points works!</p>
+<form>
+  <label for="">Member</label>
+  <mat-form-field appearance="outline" >
+    <input required type="text" matInput [matAutocomplete]="memberAutocomplete" [formControl]="memberControl"/>
+    <mat-autocomplete #memberAutocomplete="matAutocomplete">
+      <mat-option *ngFor="let member of filteredMembers | async" [value]="member">{{member}}</mat-option>
+    </mat-autocomplete> 
+  </mat-form-field>
+   
+  <label for="">House</label>
+  <mat-form-field appearance="outline" id="houseInput">
+    <input matInput type="text" [formControl]="houseControl"/>  <!-- <span>{{houseName}}</span> -->
+  </mat-form-field>
+  
+    
+  <label for="points">Points</label>
+  <mat-form-field appearance="outline">
+    <input required matInput id="points" type="number" min="0" class="form-control">
+  </mat-form-field>
+    
+  <label>Paw</label>
+  <mat-form-field appearance="outline">
+    <mat-select>
+      <mat-option *ngFor="let paw of paws" [value]="paw">{{paw}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <label for="notes">Notes</label>
+  <mat-form-field appearance="outline">
+    <textarea matInput id="notes" class="form-control"></textarea>
+  </mat-form-field>
+  
+  <label>Staff</label>
+  <span>Tiffany</span> <!-- <span>{{teacherLoggedIn}}</span> -->
+  
+  <button type="submit" mat-raised-button color="primary">Add Points</button>
+</form>
