--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,8 +12,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$WolfHouseFrontEnd-primary: mat-palette($mat-indigo);
-$WolfHouseFrontEnd-accent: mat-palette($mat-pink, A200, A100, A400);
+$WolfHouseFrontEnd-primary: mat-palette($mat-deep-purple);
+$WolfHouseFrontEnd-accent: mat-palette($mat-blue-grey, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $WolfHouseFrontEnd-warn: mat-palette($mat-red);
