teacher login form skeleton

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="header">
  <a href="#">Teacher Login</a>
 </div>
-<app-points></app-points>
+<!-- <app-leaderboard></app-leaderboard>
+<app-member-management></app-member-management>
+<app-points></app-points> -->
+<app-login></app-login>
