points form uses formgroup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
  <a href="#">Teacher Login</a>
 </div>
 <!-- <app-leaderboard></app-leaderboard>
-<app-member-management></app-member-management>
-<app-points></app-points> -->
-<app-login></app-login>
+<app-member-management></app-member-management>-->
+<app-points></app-points> 
+<!-- <app-login></app-login> -->
