--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
 }
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~boostrap/scss/bootstrap.scss';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
