refactor student contribution html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 </div>
 <!-- <app-leaderboard></app-leaderboard>
 <app-member-management></app-member-management>-->
-<app-points></app-points> 
+<!-- <app-points></app-points>  -->
 <!-- <app-login></app-login> -->
+<app-contribution-history></app-contribution-history>
