--- a/src/app/contribution-history/contribution-history.component.html
+++ b/src/app/contribution-history/contribution-history.component.html
@@ -1,1 +1,75 @@
-<p>contribution-history works!</p>
+<div class="card mb-5">
+    <div class="card-body">
+        <h1>Student Contributions</h1>
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Points</th>
+                        <th>House</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Brock</td>
+                        <td>120</td>
+                        <td>Arctic</td>
+                    </tr>
+                    <tr>
+                        <td>Amy</td>
+                        <td>80</td>
+                        <td>Timber</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>135</td>
+                        <td>Grey</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<div class="card">
+    <div class="card-body">
+        <div class="student-info-header">
+            <div>
+                <span>{{ student.name }}</span>
+                <span>Student</span>
+            </div>
+            <div>
+                <span>{{ totalPoints }}</span>
+                <span>Points</span>
+            </div>
+            <div>
+                <span>{{ student.house}}</span>
+                <span>House</span>
+            </div>
+        </div>
+
+        <div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Points</th>
+                        <th>Paw</th>
+                        <th>Comments</th>
+                        <th>Staff</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let submission of pointsSubmissions">
+                        <td>{{ submission.date }} </td>
+                        <td>{{ submission.points }} </td>
+                        <td>{{ submission.paw }}</td>
+                        <td>{{ submission.comments }}</td>
+                        <td>{{ submission.staff }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
