--- a/src/app/contribution-history/contribution-history.component.html
+++ b/src/app/contribution-history/contribution-history.component.html
@@ -1,17 +1,12 @@
 <div class="card">
     <div class="card-body">
         <div class="student-info-header">
+            <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
             <div>
-                <span>{{ student.name }}</span>
-                <span>Student</span>
-            </div>
-            <div>
-                <span>{{ totalPoints }}</span>
-                <span>Points</span>
-            </div>
-            <div>
-                <span>{{ student.house}}</span>
-                <span>House</span>
+                <span class="student-info-header-name">{{ student.name }}</span>
+                <div class="student-info-header-points">
+                    <span>{{ totalPoints }}</span><span>points</span>
+                </div>
             </div>
         </div>
 
