added teacher menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 <div class="header">
- <a href="#">Teacher Login</a>
+ <a routerLink="/teacher-login">Teacher Login</a>
 </div>
-<!-- <app-leaderboard></app-leaderboard>
-<app-member-management></app-member-management>-->
-<!-- <app-points></app-points>  -->
-<!-- <app-login></app-login> -->
-<app-student-contribution-list></app-student-contribution-list>
+<router-outlet></router-outlet>
