--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,4 +5,5 @@
     <label labelForId="passwordInput">Password</label>
     <input id="passwordInput" type="text" formControlName="password">
     <button type="button">Login</button>
+    <a routerLink="/teacher-menu">menu</a>
 </form>
