--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -4,8 +4,8 @@
     flex-wrap: wrap;
     justify-content: center;
     margin: 4em 0.25em 0;
-/*     border: 1px solid black;
- *//*     align-items: center;*/    
+    border: 1px solid yellow;
+    align-items: center;
 }
 
 .wolf-house-flex {
@@ -42,32 +42,42 @@
     /* order: 2; */
 }
 
-/* screens wider than 600px */
-@media screen and (min-width: 550px) {
+/* for windows less than 900px wide*/
+@media screen and (max-width:1000px) {
     .wolf-houses-flex {
-        margin: 5em auto 0;
-/*         border: 1px solid black;
- */        justify-content: space-between;
-        max-width: 1000px;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin: 0.25rem;
+        border: 1px solid green;
+        align-items: flex-start;
+        max-width: 400px;
     }
     
     .wolf-house-flex {
-        margin: 1em auto;
-        justify-content: center;
+        flex-direction: row;
+        margin: 0.5rem;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .wolf-house-name,
+    .wolf-house-symbol,
+    .wolf-house-points {
+        margin: 0.5rem;
     }
     
     .wolf-house-name {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         text-align: center;
     }
     
     .wolf-house-symbol {
-        width: 220px;
-        height: 220px;
-        margin: 1em 1.5em;
+        width: 50px;
+        height: 50px;
+        order: -1;
     }
     
     .wolf-house-points {
-        font-size: 3rem;
+        font-size: 1.5rem;
     }
 }
