added child router outlet to teacher menu component

--- a/src/app/teacher-menu/teacher-menu.component.css
+++ b/src/app/teacher-menu/teacher-menu.component.css
@@ -16,6 +16,20 @@
 
 .teacher-menu-nav ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.teacher-menu-nav li {
+    margin: 0.5rem;
+    padding: 0;
+}
+
+.teacher-menu-nav li a {
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+    color: black;
 }
 
 .action-area {
