added styling to teacher menu

--- a/src/app/contribution-history/contribution-history.component.html
+++ b/src/app/contribution-history/contribution-history.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card m-3">
     <div class="card-body">
         <div class="student-info-header">
             <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
