--- a/src/app/teacher-menu/teacher-menu.component.css
+++ b/src/app/teacher-menu/teacher-menu.component.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-rows: auto auto;
+    margin: 0 auto;
 }
 
 .teacher-menu-grid .leaderbaord {
