--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="header">
  <a routerLink="/teacher-login">Teacher Login</a>
 </div>
-<router-outlet></router-outlet>
+<div class="px-5">
+    <router-outlet></router-outlet>
+</div>
