--- a/src/app/points/points.component.css
+++ b/src/app/points/points.component.css
@@ -1,37 +1,36 @@
-form {
-    display: grid;
-    grid-template-columns: 100px 400px;
-    grid-gap: 1em;
-    border: 1px dashed red;
-    padding: 2em;
-    margin: 1em;
+.points-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    /* border: 1px dashed red; */
+    padding: 0rem;
+    margin: 1rem 0 0 0;
+    max-width: max-content;
 }
 
-form label,
-form span,
-form textarea,
-form button,
-form select {
-   
-    font-size: 1.2rem;
-    margin: 0.5em 0;
-    padding: 0.25em;
+.points-row-flex {
+    display: grid;
+    grid-template-columns: 100px 400px;
+    grid-template-rows: auto;
+    margin: 0.5rem;
+}
+
+.points-form-label {
+    font-weight: bolder;
+    margin: 0.25rem;
+}
+
+.points-form-input:disabled {
+    background-color: white;
+    border: none;
+    color: black;
 }
 
 form button {
     min-width: max-content;
-    padding: 0.4em 1em;
-    min-width: 160px;
+    padding: 0.5rem 1rem;
+    min-width: 140px;
     text-align: center;
-    grid-column-end: -1;
-    justify-self: end;
+    align-self: end;
 }
-
-#notes {
-    margin: 0;
-}
-
-/* override angular material mat-form-field */
-/deep/ .mat-form-field-wrapper{ padding-bottom: 0;}
-/deep/ .mat-form-field-infix{border: none;}
-/deep/ .mat-form-field-appearance-outline.mat-form-field-disabled .mat-form-field-outline { color: rgba(0, 0, 0, 0);}
