--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,4 @@
 @import '~boostrap/scss/bootstrap.scss';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } /* background-color: #e6ebf0 !important; */
