added staff point list and details page

--- a/src/app/teacher-menu/teacher-menu.component.html
+++ b/src/app/teacher-menu/teacher-menu.component.html
@@ -10,7 +10,10 @@
                 <a routerLink="./add-points">Add Points</a>
             </li>
             <li>
-                <a routerLink="./student-contributions">Contribution History</a>
+                <a routerLink="./student-points-list">Student Point History</a>
+            </li>
+            <li>
+                <a routerLink="./staff-points-list">Staff Point History</a>
             </li>
             <li>
                 <a routerLink="./member-management">Manage Members</a>
