--- a/src/app/student-points/students-points-list/student-points-list.component.html
+++ b/src/app/student-points/students-points-list/student-points-list.component.html
@@ -1,4 +1,4 @@
-<h1 style="font-size: 1.4rem">Student Contributions</h1>
+<h1 style="font-size: 1.4rem">Students' Points</h1>
 <h2 style="font-size: 1rem">Select a student to view their history</h2>
 <div class="contribution-container">
     <div class="card m-3">
@@ -21,5 +21,5 @@
             </table>
         </div>
     </div>
-    <app-contribution-history></app-contribution-history>
+    <app-student-points-details></app-student-points-details>
 </div>
