initialize Add Points form to null values

--- a/src/app/points/points.component.html
+++ b/src/app/points/points.component.html
@@ -36,6 +36,7 @@
       id="points" 
       type="number" 
       min="0" 
+      placeholder="Enter a number"
       class="form-control"
       formControlName="points">
   </div>
