--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,17 +1,17 @@
-<div class="wolf-houses-flex">
-    <div class="wolf-house-flex">
+<div class="header">
+    <a routerLink="/teacher-login">Teacher Login</a>
+</div>
+<div class="wolf-houses-grid">
+    <div class="wolf-house-flex arctic">
         <span class="wolf-house-name">Arctic</span>
-        <img class="wolf-house-symbol" src="../../assets/images/arctic-wolf.jpg">
         <span class="wolf-house-points">145</span>
     </div>
-    <div class="wolf-house-flex">
+    <div class="wolf-house-flex timber">
         <span class="wolf-house-name">Timber</span>
-        <img class="wolf-house-symbol" src="../../assets/images/timber-wolf.jpg">
         <span class="wolf-house-points">234</span>
     </div>
-    <div class="wolf-house-flex">
+    <div class="wolf-house-flex grey">
         <span class="wolf-house-name">Grey</span>
-        <img class="wolf-house-symbol" src="../../assets/images/grey-wolf.jpg">
         <span class="wolf-house-points">542</span>
     </div>
 </div>
