--- a/src/app/teacher-menu/teacher-menu.component.html
+++ b/src/app/teacher-menu/teacher-menu.component.html
@@ -1,7 +1,7 @@
 <div class="teacher-menu-grid">
     <div class="leaderboard">
         <span class="menu-title">Leaderboard</span>
-        <app-leaderboard></app-leaderboard>
+        <app-leaderboard [tiny]="true"></app-leaderboard>
     </div>
     <div class="teacher-menu-nav">
         <span class="menu-title">Menu</span>
