--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -1,74 +1,3 @@
-/* .wolf-houses-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 4rem auto;
-    max-width: 1000px;
-    width: 100%
-}
-
-.wolf-house-flex {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0.25rem 1.5rem;
-}
-
-.wolf-house-name {
-    display: block;
-    font-size: 1.8rem;
-    text-align: center;
-    margin: 0.25rem;
-    width: 100%;
-}
-
-.wolf-house-symbol {
-    width: 20vw;
-    max-width: 240px;
-    height: 20vw;
-    max-height: 240px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin: 0.25rem;
-}
-
-.wolf-house-points {
-    display: block;
-    font-size: 2rem;
-    text-align: center;
-    margin: 0;
-    width: 100%;
-} */
-
-.header {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin: 0;
-    padding: 0.5rem;
-    position: fixed;
-    background-image: linear-gradient(to bottom, rgba(50, 45, 41, 0.6), rgba(50, 45, 41, 0));
-}
-
-.header a {
-    margin: 0.25rem;
-    font-size: 0.9rem;
-    text-decoration: none;
-    color:rgb(240, 227, 215);
-}
-
-/* screens wider than 500px */
-@media screen and (min-width: 600px) {
-    .header {
-        justify-content: flex-end;
-    }
-
-    .header a {
-        margin: 0.25rem;
-        font-size: 1rem;
-    }
-}
-
-
 .wolf-houses-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -133,43 +62,42 @@
     font-size: 4vw;
 }
 
+/* styles for tiny leaderboard */
 
-/* @media screen, (max-width:300px) {
-    .wolf-houses-flex {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        margin: 0.25rem;
-        align-items: flex-start;
-        width: 100%
-    }
+.wolf-houses-flex-tiny {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 0.25rem;
+    align-items: flex-start;
+    width: 100%
+}
     
-    .wolf-house-flex {
-        display: grid;
-        grid-template-columns: 65px 120px auto;
-        grid-template-rows: auto auto auto;
-        margin: 0.5rem 0;
-    }
+.wolf-house-flex-tiny {
+    display: grid;
+    grid-template-columns: 65px 120px auto;
+    grid-template-rows: auto auto auto;
+    margin: 0.5rem 0;
+}
 
-    .wolf-house-name,
-    .wolf-house-symbol,
-    .wolf-house-points {
-        margin: 0.25rem;
-    }
+.wolf-house-name-tiny,
+.wolf-house-symbol-tiny,
+.wolf-house-points-tiny {
+    margin: auto 0.25rem;
+}
     
-    .wolf-house-name {
-        font-size: 1.5rem;
-        text-align: left;
-    }
-    
-    .wolf-house-symbol {
-        min-width: 44px;
-        max-width: 44px;
-        height: 44px;
-        order: -1;
-    }
-    
-    .wolf-house-points {
-        font-size: 1.5rem;
-        font-weight: bolder;
-    }
-} */
+.wolf-house-name-tiny {
+    font-size: 1.2rem;
+    text-align: left;
+}
+
+.wolf-house-symbol-tiny {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.wolf-house-points-tiny {
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
