--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,27 +1,40 @@
+:host {
+    margin: 0 auto;  
+    padding-top: 3rem;  
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-size: 2rem;
+    font-weight: lighter;
+    margin: 1.5rem 1rem 0.5rem;
+}
+
 form {
     display: grid;
-    grid-template-columns: 100px 400px;
-    grid-gap: 1em;
-    border: 1px dashed red;
-    padding: 2em;
-    margin: 1em;
+    grid-template-columns: auto 300px;
+    grid-template-rows: auto;
+    grid-gap: 1rem;
+    padding: 0;
+    margin: 1.5rem;
 }
 
-form label,
-form span,
-form textarea,
-form button,
-form select {
-   
-    font-size: 1.2rem;
-    margin: 0.5em 0;
-    padding: 0.25em;
+form label {
+    margin: auto 0;
+    text-align: right;
 }
 
-form button {
+form input {
+    padding: 0.25rem;
+}
+
+.login-button {
     min-width: max-content;
-    padding: 0.4em 1em;
-    min-width: 160px;
+    padding: 0.4rem 1.2rem;
     text-align: center;
     grid-column-end: -1;
     justify-self: end;
@@ -30,8 +43,3 @@ form button {
 #notes {
     margin: 0;
 }
-
-/* override angular material mat-form-field */
-/deep/ .mat-form-field-wrapper{ padding-bottom: 0;}
-/deep/ .mat-form-field-infix{border: none;}
-/deep/ .mat-form-field-appearance-outline.mat-form-field-disabled .mat-form-field-outline { color: rgba(0, 0, 0, 0);}
